--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
-<%- include('./parcial/header.ejs') %> 
-<%- include('./parcial/form.ejs')%> 
-<%- include('./parcial/lista.ejs')%>
-<%- include('./parcial/chat.ejs')%>
-<%- include('./parcial/footer.ejs')%> 
+<%- include('./parcial/header.ejs') %>
+<%- include('./parcial/logIn.ejs') %> 
+<%- include('./parcial/productos.ejs') %>
+<%- include('./parcial/chat.ejs') %>
+<%- include('./parcial/footer.ejs') %>
 
 
 
