--- a/views/parcial/header.ejs
+++ b/views/parcial/header.ejs
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Productos</title>
-    <script src="/socket.io/socket.io.js"></script>
     <script src="../main.js"></script>
+    <title>Productos</title>
 </head>
 <body style="background-color: #a39f9e;">
-    <h1 style="text-align: center; color: #ffc107; background-color: #212529;">Productos</h1>
-    <div style="max-width: 500px; margin: 30px auto;">
+    <div style="background-color: #212529;">
+      <div class="container">
+        <div class="row">
+          <div class="col-8">
+            <h1 style="text-align: center; color:#ffc107">Productos</h1>
+          </div>
+          <div class="col-4 align-self-end">
+                <button class="btn btn-warning">Log in</button>
+                <button class="btn btn-warning">Log out</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
