--- a/views/parcial/header.ejs
+++ b/views/parcial/header.ejs
@@ -9,17 +9,8 @@
     <title>Productos</title>
 </head>
 <body style="background-color: #a39f9e;">
-    <div style="background-color: #212529;">
-      <div class="container">
-        <div class="row">
-          <div class="col-8">
-            <h1 style="text-align: center; color:#ffc107">Productos</h1>
-          </div>
-          <div class="col-4 align-self-end">
-                <button class="btn btn-warning">Log in</button>
-                <button class="btn btn-warning">Log out</button>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div style="background-color: #212529;
+               padding-top: 15px;
+               padding-bottom: 15px;">
+      <h1 style="text-align: center; color:#ffc107">Productos en Node</h1>
     </div>
