--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,3 @@
 <%- include('./parcial/header.ejs') %>
-<%- include('./parcial/logIn.ejs') %> 
-<%- include('./parcial/productos.ejs') %>
-<%- include('./parcial/chat.ejs') %>
+<%- include('./parcial/LogIn/loginform.ejs') %>
 <%- include('./parcial/footer.ejs') %>
-
-
-
