--- a/views/parcial/logInForm.ejs
+++ b/views/parcial/logInForm.ejs
@@ -28,7 +28,7 @@
         </button>
       </div>
       <form action="/signUp">
-        <div>
+        <div style="text-align:center;">
           <button 
           style="margin-bottom: 10px" 
           type="submit"
