--- a/views/LogIn/profileUser.ejs
+++ b/views/LogIn/profileUser.ejs
@@ -1,4 +1,4 @@
-<% if (isUser){ %>
+<% if (isUser = true){ %>
     <div class="container text-center my-3">
         <div class="jumbotron" 
              style="background-color: green;color: white;">
