--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,54 +1,3 @@
-
-
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="../main.js"></script>
-    <title>Productos</title>
-</head>
-<body style="background-color: #a39f9e;">
-    <div style="background-color: #212529;
-               padding-top: 15px;
-               padding-bottom: 15px;">
-      <h1 style="text-align: center; color:#ffc107">Productos en Node</h1>
-    </div>
-
-    <%- include('./logIn/sign-up.ejs') %>
-
-
-
-    
-</div>
-<!-- Footer -->
-<footer class="bg-dark text-center text-white fixed-bottom">
-<!-- Grid container -->
-<div class="container p-4">
-
-<!-- Section: Text -->
-<section class="mb-4">
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-    repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
-    eum harum corrupti dicta, aliquam sequi voluptate quas.
-  </p>
-</section>
-<!-- Section: Text -->
-
-<!-- Copyright -->
-<div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-© 2022 Copyright:
-<a class="text-white" href="https://github.com/NikoSeta">NicoDeSeta</a>
-</div>
-<!-- Copyright -->
-</footer>
-<!-- Footer -->
-
-</body>
-</html>
+<%- include('../partial/header.ejs') %>
+<%- include('./main.ejs') %>
+<%- include('../partial/footer.ejs') %>
