--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -1,3 +1,6 @@
+<%- include('../partial/header.ejs') %>
+
+<%- include('../partial/footer.ejs') %>
 <div class="container my-5">
     <div style="max-width: 500px; 
             margin: 30px auto;
@@ -46,4 +49,4 @@
     </form>
   </div>
 </div>
-  
+<%- include('../partial/footer.ejs') %> 
