--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -1,3 +1,4 @@
+<%- include('../partial/header.ejs') %>
 <br>
 
 <div class="container">
@@ -44,3 +45,4 @@
         </div>  
       </div>
     </div>
+    <%- include('../partial/footer.ejs') %>
