--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -1,6 +1,4 @@
 <%- include('../partial/header.ejs') %>
-
-<%- include('../partial/footer.ejs') %>
 <div class="container my-5">
     <div style="max-width: 500px; 
             margin: 30px auto;
@@ -38,7 +36,7 @@
       </div>
   
       <div class="form-group">
-        <input class="btn btn-warning my-3" type="submit" value="Sing up">
+        <input class="btn btn-warning my-3" type="submit" value="Sign up">
       </div>
     </form>
     <hr>
