--- a/views/profileUser.ejs
+++ b/views/profileUser.ejs
@@ -1,3 +1,5 @@
+<%- include('../partial/header.ejs') %>
+
 <% if (isUser = true){ %>
     <div class="container text-center my-3">
         <div class="jumbotron" 
@@ -14,3 +16,6 @@
             </form>
         </div>
     </div>
+    <% } %>
+
+<%- include('../partial/footer.ejs') %>
